# layer9

./: .env.example  .gitignore  BRUTAL_TRUTH.md  BUILD_STATUS.md  CLAUDE.LOCAL.md  CLAUDE.md  CTO_FINAL_REPORT.md  CTO_FINAL_SUMMARY.md  CTO_MISSION_COMPLETE.md  CTO_MISSION_REPORT.md  CTO_MISSION_STATUS.md  Cargo.toml  EXAMPLES_DEMO_GUIDE.md  GETTING_STARTED.md  HONEST_STATUS.md  LAYER9_COMPLETE.md  LICENSE  Makefile  PORTING_STATUS.md  PRODUCTION_READY_SUMMARY.md  PROGRESS_REPORT.md  README.md  ROADMAP_TO_PRODUCTION.md  TESTING_INFRASTRUCTURE.md  TEST_REPORT.md  TEST_RESULTS.md  VALIDATION_SUMMARY.md  WARP_COMPLETE.md  build.sh  check_examples.sh  layer9.deploy.toml  package-lock.json  package.json  quick_test.sh  simple_test.html  test_examples.js  test_with_playwright.js  webpack.config.js
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: architecture.txt  code-showcase.txt  development-stats.txt  layer9-banner.txt  performance-comparison.txt  product-hunt-badge.txt
coverage/: tarpaulin-report.html
crates/cli/: Cargo.toml
crates/cli/src/: haf_gen.rs  haf_lint.rs  haf_lint_simple.rs  haf_refactor.rs  main.rs
crates/cli/src/deploy/: aws.rs  cloudflare.rs  config.rs  environment.rs  mod.rs  netlify.rs  status.rs  vercel.rs
crates/cli/templates/: dashboard.rs  fullstack.rs  haf-full.rs  haf-minimal.rs  minimal.rs
crates/core/: Cargo.toml  NEXT_STEPS_HAF.md
crates/core/examples/haf-todo/: Cargo.toml
crates/core/examples/haf-todo/src/: lib.rs
crates/core/src/: api_docs.rs  app.rs  async_component.rs  async_component_v2.rs  auth.rs  auth_config_tests.rs  auth_tests.rs  auth_upload_integration_tests.rs  cache.rs  component.rs  config.rs  css_runtime.rs  db.rs  db_api.rs  db_sqlite.rs  db_sqlx.rs  env.rs  error.rs  fetch.rs  form.rs  form_builder.rs  form_traits.rs  hooks.rs  i18n.rs  image.rs  image_handler.rs  image_lazy.rs  image_transform.rs  jwt.rs  layers.rs  lib.rs  middleware.rs  middleware_v2.rs  monitoring.rs  reactive.rs  reactive_v2.rs  router.rs  router_v2.rs  security.rs  server.rs  (+11 more)
crates/core/src/haf/: compat.rs  component.rs  contracts.rs  l1_core.rs  l2_runtime.rs  l3_framework.rs  mod.rs  reactive.rs  vdom.rs
crates/core/src/haf/tests/: basic_tests.rs  mod.rs  reactive_tests.rs
crates/core/tests/: integration_tests.rs  web.rs
crates/layer9-server/: Cargo.toml
crates/layer9-server/src/: main.rs
crates/macro/: Cargo.toml
crates/runtime/: Cargo.toml
docs/: CTO_MISSION_COMPLETE.md  FINAL_STATUS_REPORT.md  INFRASTRUCTURE_IMPROVEMENTS.md  LAYER9_PRODUCTION_FEATURES_ASSESSMENT.md  WARP_PRODUCTION_FEATURES_ASSESSMENT.md
docs/implementation/: DATABASE_IMPLEMENTATION.md  DEPLOYMENT.md  HAF_IMPLEMENTATION_COMPLETE.md  HAF_MIGRATION_GUIDE.md  HAF_MIGRATION_PLAN.md  HAF_VIOLATIONS_ANALYSIS.md  HAF_VIOLATION_EXAMPLES.md  JWT_AUTH_CHANGES_SUMMARY.md  MIGRATION_AUTH.md  MIGRATION_HAF.md  TEST_COVERAGE_REPORT.md
docs/plans/: projectplan-bundle-size.md  projectplan-jwt-fix.md  projectplan-vdom.md  projectplan.md
examples/: TEST_REPORT.md  auth-config-example.html  production_app.rs  websocket-reconnect-test.html
examples/async-counter/: Cargo.toml  index.html
examples/async-counter/src/: lib.rs
examples/auth-jwt-demo/: Cargo.toml  index.html
examples/auth-jwt-demo/src/: lib.rs
examples/auth-upload/: Cargo.toml  index.html
examples/auth-upload/src/: lib.rs
examples/counter/: Cargo.toml  DEMO_GUIDE.md  beautiful.html  index.html  styles.css  styles.min.css  test-counter.js  test-rapid-clicks.js  test-results-counter.json
examples/counter/src/: beautiful.rs  lib.rs
examples/counter/tests/: web.rs
examples/css-showcase/: Cargo.toml  index.html
examples/database-crud/: .env.example  Cargo.toml  README.md  build.sh  index.html
examples/database-crud/src/: lib.rs  server.rs
examples/form-validation/: Cargo.toml  index.html
examples/form-validation/src/: lib.rs
examples/forms-demo/: Cargo.toml  index.html  test-vdom-diff.html
examples/forms-demo/src/: lib.rs
examples/github-dashboard/: Cargo.toml  index.html
examples/haf-todo/: Cargo.toml  README.md  index.html
examples/image-optimization/: Cargo.toml  README.md  index.html  styles.css  sw.js
examples/image-optimization/src/: lib.rs
examples/memory-game/: Cargo.toml  index.html
examples/memory-game/src/: lib.rs
examples/middleware-test/: Cargo.toml  index.html
examples/middleware-test/src/: lib.rs
examples/nextjs-integration/: README.md
examples/ssr-demo/: Cargo.toml
examples/ssr-demo/src/: lib.rs  main.rs
examples/todo-app/: Cargo.toml  DEMO_GUIDE.md  index.html  test-results-todo.json  test-todo.js
examples/todo-app/src/: lib.rs  simple.rs
examples/todo-app/tests/: CREATE_GIFS_GUIDE.md  README.md  SCREENSHOT_CAPTURE_README.md  TESTING_GUIDE.md  capture-all-screenshots.sh  capture-demo-screenshots.js  create-gifs.sh  generate-realistic-demo.js  package-lock.json  package.json  playwright-tests.js  puppeteer-tests.js  run-tests.sh  serve.py  simple-tests.sh  verify-setup.sh
scripts/: build-all-examples.sh  build-all-release.sh  build-all-wasm.sh  dev-server.js  optimize-wasm.sh  test-coverage.sh
scripts/gif-capture/: README.md  capture-all-examples.js  capture-and-create-gifs.sh  create-gifs.js  create-simple-gifs.js  debug-capture.js  optimize-gifs.js  package-lock.json  package.json  simple-capture.js  start-servers.sh  stop-servers.sh  test-puppeteer.js
scripts/ultrathink/: claude-prompt.txt  commit-message.txt  completed-todos.json  todos.json  (+19 more)
src/: lib.rs
test/: README.md  ci-test-suite.js  comprehensive-test-runner.js  deep-component-test.js  deep-test-final.js  deep-test-v2.js  deep-test-v3.js  final-validation.js  fixed-validator.js  layer9-health-check.js  layer9-validation-fixed.js  layer9-validation.js  localhost-validator.js  production-stress-test.js  quick-comprehensive-test.js  quick-dom-check.js  simple-test.js  ultra-validator.js  validate-layer9.js
tests/: IMPLEMENTATION_SUMMARY.md  README.md  TEST_DOCUMENTATION.md  capture-screenshots.js  package-lock.json  package.json  run-tests.sh  setup.sh  test-runner.js
(+33 files in other folders)
