[package]
name = "layer9-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "layer9"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower-livereload = "0.9"
notify = "6"
layer9-framework = { path = "../.." }

# Build tools
wasm-pack = "0.12"
cargo_metadata = "0.18"
which = "6"

# Utils
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket for hot reload
tokio-tungstenite = "0.21"
futures = "0.3"

# Browser opening
webbrowser = "1.0"

# Deployment
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
regex = "1"
atty = "0.2"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
base64 = "0.21"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HAF Linting
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
quote = "1"