[package]
name = "warp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Layer system
downcast-rs = "1.2"
typemap = "0.3"

# Web
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "console",
] }
js-sys = "0.3"

# Async
futures = "0.3"
wasm-bindgen-futures = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
console_error_panic_hook = "0.1"

# Additional dependencies
once_cell = "1.19"
serde-wasm-bindgen = "0.6"