[package]
name = "layer9-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Layer system
downcast-rs = "1.2"
typemap = "0.3"

# Web
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element", 
    "HtmlElement",
    "Window",
    "console",
    "History",
    "Location",
    "PopStateEvent",
    "Storage",
    "HtmlInputElement",
    "File",
    "FileList",
    "FormData",
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "EventTarget",
    "MessageEvent",
    "WebSocket",
    "BinaryType",
    "Blob",
    "Navigator",
    "Performance",
    "PerformanceEntry",
    "Url",
    "CloseEvent",
    "ErrorEvent", 
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "MouseEvent",
    "RequestCredentials",
    "Text",
    "Node",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "Crypto",
    "NodeList",
] }
js-sys = "0.3"

# Async
futures = "0.3"
wasm-bindgen-futures = "0.4"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
console_error_panic_hook = "0.1"

# Additional dependencies
once_cell = "1.19"
serde-wasm-bindgen = "0.6"
urlencoding = "2.1"
sha2 = "0.10"
base64 = "0.22"
regex = "1.11"

# For SSR
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
ssr = ["axum", "tokio", "tower"]