[package]
name = "layer9-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Layer system
downcast-rs = "1.2"

# Web
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element", 
    "HtmlElement",
    "Window",
    "console",
    "History",
    "Location",
    "PopStateEvent",
    "Storage",
    "HtmlInputElement",
    "HtmlImageElement",
    "File",
    "FileList",
    "FormData",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "EventTarget",
    "MessageEvent",
    "WebSocket",
    "BinaryType",
    "Blob",
    "Navigator",
    "Performance",
    "PerformanceEntry",
    "Url",
    "CloseEvent",
    "ErrorEvent", 
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "MouseEvent",
    "RequestCredentials",
    "Text",
    "Node",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "Crypto",
    "NodeList",
    "CssStyleDeclaration",
    "DomTokenList",
] }
js-sys = "0.3"

# Async
futures = "0.3"
wasm-bindgen-futures = "0.4"
async-trait = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
console_error_panic_hook = "0.1"

# Additional dependencies
once_cell = "1.19"
serde-wasm-bindgen = "0.6"
urlencoding = "2.1"
sha2 = "0.10"
base64 = "0.22"
regex = "1.11"
parking_lot = "0.12"

# Image processing (server-side only)
image = { version = "0.25", optional = true }
imageproc = { version = "0.25", optional = true }
webp = { version = "0.3", optional = true }
ravif = { version = "0.11", optional = true }

# For SSR
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "json"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
html-escape = "0.2.13"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
ssr = ["axum", "tokio", "tower", "tower-http", "sqlx", "uuid", "image", "imageproc", "webp", "ravif", "reqwest"]
wasm = []
haf = []
haf-strict = ["haf"]
