[package]
name = "async-counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
layer9-core = { path = "../../crates/core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window"] }

