[package]
name = "auth-jwt-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
layer9-core = { path = "../../crates/core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "Window",
    "Event",
    "EventTarget",
]