[package]
name = "layer9-example-auth-upload"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
layer9-core = { path = "../../crates/core" }
layer9-macro = { path = "../../crates/macro" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlFormElement",
    "HtmlButtonElement",
    "File",
    "FileList",
    "Window",
    "Event",
    "MouseEvent",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"