[package]
name = "layer9-example-form"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
layer9-core = { path = "../../crates/core" }
wasm-bindgen = "0.2"
wee_alloc = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlElement", "HtmlInputElement", "Event", "InputEvent"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"