[package]
name = "layer9-example-forms"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
layer9-core = { path = "../../crates/core" }
wasm-bindgen = "0.2"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Window",
  "console",
]
