[package]
name = "ssr-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
layer9-core = { path = "../../crates/core", features = ["ssr"] }
tokio = { version = "1.34", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = "0.4"

# For client-side
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ssr"]
ssr = ["layer9-core/ssr"]

# Profile settings should be in workspace root Cargo.toml